[package]
name = "gapbuffer"
version = "0.1.0"
authors = ["togatoga <togasakitogatoga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.2"
ropey = "1.1.0"
rand = "0.6"

[[bench]]
name = "benchmark"
harness = false
