[package]
name = "pool"
version = "0.1.0"
authors = ["togatoga <togasakitogatoga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion="0.3"
bumpalo = "3.5.0"

[[bench]]
name="pool"
harness=false